[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/ui/RaceSelect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0flo2kxj716s" path="res://pictures/title_bg_1.png" id="2_6jbdy"]
[ext_resource type="Texture2D" uid="uid://b6pjgjm43g033" path="res://pictures/elf_girl_1/eg1_south.png" id="3_elf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Elf"]
bg_color = Color(1, 0.9, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Orc"]
bg_color = Color(0.2, 0.8, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Fairy"]
bg_color = Color(0.7, 0.3, 0.9, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Infernal"]
bg_color = Color(0.9, 0.2, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)

[node name="RaceSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6jbdy")
expand_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMargin" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="TitleLabel" type="Label" parent="MainContainer/TopMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 45
text = "Select Race"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Choose your race"
horizontal_alignment = 1

[node name="CardsMargin" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="CardsContainer" type="HBoxContainer" parent="MainContainer/CardsMargin"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ElfCard" type="PanelContainer" parent="MainContainer/CardsMargin/CardsContainer"]
custom_minimum_size = Vector2(170, 255)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Elf")

[node name="ElfButton" type="Button" parent="MainContainer/CardsMargin/CardsContainer/ElfCard"]
layout_mode = 2
flat = true

[node name="Content" type="VBoxContainer" parent="MainContainer/CardsMargin/CardsContainer/ElfCard"]
layout_mode = 2
mouse_filter = 2

[node name="ImageContainer" type="CenterContainer" parent="MainContainer/CardsMargin/CardsContainer/ElfCard/Content"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ElfImage" type="TextureRect" parent="MainContainer/CardsMargin/CardsContainer/ElfCard/Content/ImageContainer"]
custom_minimum_size = Vector2(145, 145)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_elf")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MainContainer/CardsMargin/CardsContainer/ElfCard/Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Elf"
horizontal_alignment = 1

[node name="OrcCard" type="PanelContainer" parent="MainContainer/CardsMargin/CardsContainer"]
custom_minimum_size = Vector2(170, 255)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Orc")

[node name="OrcButton" type="Button" parent="MainContainer/CardsMargin/CardsContainer/OrcCard"]
layout_mode = 2
flat = true

[node name="Content" type="VBoxContainer" parent="MainContainer/CardsMargin/CardsContainer/OrcCard"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/CardsMargin/CardsContainer/OrcCard/Content"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MainContainer/CardsMargin/CardsContainer/OrcCard/Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Orc"
horizontal_alignment = 1

[node name="FairyCard" type="PanelContainer" parent="MainContainer/CardsMargin/CardsContainer"]
custom_minimum_size = Vector2(170, 255)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Fairy")

[node name="FairyButton" type="Button" parent="MainContainer/CardsMargin/CardsContainer/FairyCard"]
layout_mode = 2
flat = true

[node name="Content" type="VBoxContainer" parent="MainContainer/CardsMargin/CardsContainer/FairyCard"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/CardsMargin/CardsContainer/FairyCard/Content"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MainContainer/CardsMargin/CardsContainer/FairyCard/Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Fairy"
horizontal_alignment = 1

[node name="InfernalCard" type="PanelContainer" parent="MainContainer/CardsMargin/CardsContainer"]
custom_minimum_size = Vector2(170, 255)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Infernal")

[node name="InfernalButton" type="Button" parent="MainContainer/CardsMargin/CardsContainer/InfernalCard"]
layout_mode = 2
flat = true

[node name="Content" type="VBoxContainer" parent="MainContainer/CardsMargin/CardsContainer/InfernalCard"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/CardsMargin/CardsContainer/InfernalCard/Content"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MainContainer/CardsMargin/CardsContainer/InfernalCard/Content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Infernal"
horizontal_alignment = 1

[node name="BottomMargin" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/BottomMargin"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MainContainer/BottomMargin/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="BackButton" type="Button" parent="MainContainer/BottomMargin/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"
